--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 	font-weight: 400;
 }
 
+
 /************ Default Css ************/
 * {
   margin: 0;
@@ -47,7 +48,7 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  background-color: #121212 !important;
+  background-color: #120b0b !important;
   color: #fff !important;
   font-family: 'Centra', sans-serif !important;
 }
